    * 0027 esx_vsphere_sensors: it is now possible override the state of sensors
    * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches
    * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
    * 0091 apc_ats_output: new check for output measurements on APC ATS devices
    * 0068 check_sql: support for mssql databases included
    * 0024 FIX: cisco_wlc: removed configuration parameter ap_model
    * 0065 FIX: veeam_client: check behaviour improved when backup is in progress
    * 0066 FIX: veeam_jobs: check behaviour improved when backup is in progress

    Multisite:
    * 0001 New filters for selecting several host/service-groups at once...
    * 0050 New concept of favorite hosts and services plus matching filters and views...
    * 0043 FIX: LDAP: Improved error reporting during synchronisation...
    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles
    * 0046 FIX: Allowing "-" chars in var names again...
    * 0049 FIX: Fixed check-mk-automation call on each new created apache thread...
    * 0203 FIX: Changed sidebar reload interval to be more random...
    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
    * 0206 FIX: Fixed logwatch permission check when using liveproxy...

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0048 FIX: Fixed locking issue on host diagnose page
    * 0033 FIX: WATO forms: incorrect handling of checkbox state
    * 0205 FIX: Allowing star chars in variable names to fix role/permission editing...
    * 0207 FIX: Explicit communities were not written to config files in all cases

    Notifications:
    * 0032 FIX: mail notification plugin: replace windows forbidden characters in mail images

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...