@@ -1,0 +1,9 @@
+Title: fileinfo.groups: Added minimum/maximum file size parameters
+Level: 1
+Component: checks
+Version: 1.2.3i7
+Date: 1384250251
+Class: feature
+
+It is now possible to configure thresholds for the minimum and maximum
+file size of all files found with a file grouping pattern.
