@@ -121,11 +121,20 @@ def check_fileinfo_groups(item, params, info):
     age_oldest = None
     age_newest = 0
     size_all = 0
+    size_smallest = None
+    size_largest  = 0
     # Start counting all values
     for line in info[1:]:
         for pattern in params['precompiled_patterns']:
             if fnmatch.fnmatch(line[0], pattern) and str(line[1]) != 'missing':
-                size_all += int(line[1])
+                size = int(line[1])
+                size_all += size
+                if size_smallest == None:
+                    size_smallest = size
+                else:
+                    size_smallest = min(size_smallest, size)
+                size_largest = max(size_largest, size)
+
                 age = reftime - int(line[2])
                 if age_oldest == None: # very first match
                     age_oldest = age
@@ -133,6 +142,7 @@ def check_fileinfo_groups(item, params, info):
                 else:
                     age_oldest = max(age_oldest, age)
                     age_newest = min(age_newest, age)
+
                 count_all += 1
 
     if age_oldest == None:
@@ -140,10 +150,16 @@ def check_fileinfo_groups(item, params, info):
 
     # Start Checking
     check_definition = [
-        ("age_oldest", age_oldest, get_age_human_readable),
-        ("age_newest",  age_newest,  get_age_human_readable),
-        ("count", count_all, saveint),
-        ("size", size_all, get_filesize_human_readable)]
+        ("age_oldest",    age_oldest,    get_age_human_readable),
+        ("age_newest",    age_newest,    get_age_human_readable),
+        ("count",         count_all,     saveint),
+        ("size",          size_all,      get_filesize_human_readable),
+    ]
+
+    if size_smallest is not None:
+        check_definition.append(("size_smallest", size_smallest, get_filesize_human_readable))
+    if size_largest != 0:
+        check_definition.append(("size_largest",  size_largest,  get_filesize_human_readable))
 
     return fileinfo_check_function(check_definition, params)
 
