@@ -10,6 +10,7 @@
     * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
     * 0091 apc_ats_output: new check for output measurements on APC ATS devices
     * 0068 check_sql: support for mssql databases included
+    * 0208 fileinfo.groups: Added minimum/maximum file size parameters...
     * 0024 FIX: cisco_wlc: removed configuration parameter ap_model
     * 0065 FIX: veeam_client: check behaviour improved when backup is in progress
     * 0066 FIX: veeam_jobs: check behaviour improved when backup is in progress
